...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">


            <androidx.cardview.widget.CardView
                android:id="@+id/googleAuth"
                android:contentDescription="googleAuthView"
                style="@style/CardViewAuthStyle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/primary"
                    android:checked="false"
                    android:gravity="top" />

...
