...
    <string name="dislike">dislike</string>
    <string name="like">like</string>
    <string name="dislikePrompt">Are you sure you want to dislike?</string>
    <string name="likePrompt">Are you sure you want to like?</string>
    <string name="send">Send</string>
    <string name="sendPrompt">Are you sure you want to send your money?</string>
    <string name="logout">Logout</string>
    <string name="logoutPrompt">Are you sure you want to logout?</string>
    <string name="acceptPushTitle">Request accepted</string>
    <string name="acceptingPushContent">Member was found</string>
    <string name="supplierCancelPushTitle">Request declined</string>
    <string name="supplierCanceledPushContent">Please try to request again</string>
    <string name="demanderCancelPushTitle">Request canceled</string>
...
    <string name="enterPrice">Price</string>
    <string name="supplyServices">Offer</string>
    <string name="demandServices">Demand</string>
    <string name="pleaseConfirmMember">Please, confirm member</string>
    <string name="showAll">Show all</string>
    <string name="travelType">Travel type</string>
    <string name="menu">Menu</string>
    <string name="location">Location</string>
    <string name="contract">Post your first service</string>
    <string name="yourProfile">Your profile</string>
    <string name="yourWallet">Your wallet</string>
    <string name="yourHistory">Your history</string>
    <string name="filterDescription">Filter services on the map</string>
...
