<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mapId"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pointerImage"
            style="@style/IconButtonStyle"
            android:layout_gravity="center"
            android:layout_marginBottom="28dp"
            android:src="@drawable/pointer" />

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="start|top"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/circular_button"
            android:clickable="true"
            android:elevation="8dp"
            android:focusable="true"
            android:scaleType="center"
            android:src="@drawable/menu"
            android:visibility="gone" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:scaleType="center"
            android:src="@drawable/ic_filter"
            android:tint="@color/secondary"
            android:visibility="gone"
            app:fabSize="auto"
            app:maxImageSize="48dp" />

        <FrameLayout
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_gravity="end|top">

            <ImageButton
                android:id="@+id/chat"
                style="@style/IconButtonStyle"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@color/fui_transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/chat" />

            <TextView
                android:id="@+id/totalUnread"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/chat_badge_background"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/secondary"
                android:textSize="@dimen/text_size_secondary"
                android:visibility="gone" />

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/navigation"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="28dp"
            app:cardElevation="8dp">

            <ImageButton
                android:id="@+id/navigationImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:background="@color/fui_transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/navigation"
                android:tint="@color/secondary"
                android:visibility="visible" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/switcherLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <live.noxbox.ui.RoleSwitcherLayout
                android:id="@+id/roleSwitcherLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp" />
        </RelativeLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/locationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/my_location"
            android:tint="@color/secondary"
            android:visibility="gone"
            app:fabSize="auto"
            app:maxImageSize="48dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/customFloatingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="32dp"
            android:scaleType="center"
            android:src="@drawable/add"
            android:tint="@color/secondary"
            android:visibility="gone"
            app:fabSize="auto"
            app:maxImageSize="48dp" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="12dp"
            android:layout_marginTop="58dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/debugNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/generatePush"
                android:textColor="@color/debug"
                android:textSize="@dimen/text_title"
                android:visibility="gone" />

            <TextView
                android:id="@+id/debugGenerateNoxboxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/generateNoxboxes"
                android:textColor="@color/debug"
                android:textSize="@dimen/text_title"
                android:visibility="gone" />

            <TextView
                android:id="@+id/debugRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/request"
                android:textColor="@color/debug"
                android:textSize="@dimen/text_title"
                android:visibility="gone" />

            <TextView
                android:id="@+id/debugAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/accept"
                android:textColor="@color/debug"
                android:textSize="@dimen/text_title"
                android:visibility="gone" />

            <TextView
                android:id="@+id/debugPhotoVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="32dp"
                android:text="@string/verifyPhoto"
                android:textColor="@color/debug"
                android:textSize="@dimen/text_title"
                android:visibility="gone" />

            <TextView
                android:id="@+id/debugPhotoReject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="32dp"
                android:text="@string/rejectPhoto"
                android:textColor="@color/debug"
                android:textSize="@dimen/text_title"
                android:visibility="gone" />

            <TextView
                android:id="@+id/debugComplete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginTop="32dp"
                android:text="@string/complete"
                android:textColor="@color/debug"
                android:textSize="@dimen/text_title"
                android:visibility="gone" />
        </LinearLayout>


    </fragment>

    <include layout="@layout/demonstration_available" />

    <include layout="@layout/demonstration_moving" />

    <include layout="@layout/fragment_offline" />

    <include layout="@layout/fragment_off_gps" />

    <RelativeLayout
        android:id="@+id/requestUpdateLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BA000000"
        android:visibility="gone">

        <TextView
            android:id="@+id/requestUpdateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/updateApp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:text="@string/newVersionAvailable"
            android:textColor="@color/secondary"
            android:textSize="@dimen/big" />

        <Button
            android:id="@+id/updateApp"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:background="@drawable/button_corner"
            android:elevation="@dimen/global_elevation"
            android:gravity="center"
            android:minWidth="64dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/update"
            android:textColor="@color/secondary"
            android:textSize="14sp"
            android:visibility="visible" />

    </RelativeLayout>

    <include layout="@layout/dialog_fragment_noxbox_type_list" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:clickable="true"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:theme="@style/NavigationViewStyle"
        app:headerLayout="@layout/navigation_header"
        app:itemIconTint="@color/primary"
        app:itemTextColor="@color/primary"
        app:menu="@menu/navigation_body" />


</androidx.drawerlayout.widget.DrawerLayout>
