...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="16dp"
                android:src="@drawable/arrow_back" />

...
                                android:background="@color/primary"
                                android:clickable="true"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/closeOrRemove"
                                    android:layout_width="match_parent"
                                    android:layout_height="36dp"
                                    android:layout_gravity="center"
                                    android:duplicateParentState="true"
                                    android:gravity="center"
                                    android:textColor="@color/secondary"
...
                                android:background="@color/primary"
                                android:clickable="true"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/publish"
                                    android:layout_width="match_parent"
                                    android:layout_height="36dp"
                                    android:layout_gravity="center"
                                    android:duplicateParentState="true"
                                    android:gravity="center"
                                    android:text="@string/add"
...
